# rust-web-server-template

./: Cargo.toml  LICENSE  README.md
migrations/: 20240203120000_create_users_table.up.sql
src/lib/: lib.rs
src/lib/application/: error.rs  mod.rs
src/lib/application/flows/: user_service.rs
src/lib/domain/user/: error.rs  model.rs  repository.rs
src/lib/infra/: config.rs  mod.rs
src/lib/infra/storage/: mod.rs  postgres.rs
src/lib/infra/storage/adapter/: mod.rs  user_repository.rs
src/lib/infra/storage/adapter/postgres/: mod.rs  postgres.rs  user_repository.rs
src/lib/presentation/: http.rs  mod.rs
src/lib/presentation/handlers/: user_handlers.rs
