[package]
name = "rust-web-server-template"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_web_server_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "rustweb-server-bin"
path = "src/bin/server/main.rs"

[dependencies]
sqlx = {version = "0.8.6", features = ["postgres", "macros"]}
async-trait = "0.1.89"
eyre = "0.6.12"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }